--- a/FrontEnd/src/style.css
+++ b/FrontEnd/src/style.css
@@ -38,12 +38,20 @@ html {
   /* CSS for the modal content */
   .modal-content {
       background-color: #fff;
-      margin: 15% auto;
+      margin: 10% auto;
       padding: 20px;
       border: 1px solid #888;
       min-width: 200px;
       max-width: 400px;
   }
+        .modal-content1 {
+            background-color: #fff;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            min-width: 200px;
+            max-width: 400px;
+        }
 #screen{
     min-height: 1000px;
 }
